???? 0.8.9

    user visible changes, client:
    * unwtar and check-checksum are now done as internal instl commands instead of using command line tools.
    * During unwtar if .wtar.aa file is joined, .wtar.done file is removed.
    * New command check_checksum_for_file will check checksums according to the to_sync_info_map.txt instead of relying on external .exe.

    user visible changes, admin:
    * Creation of .txt files for all files in instl directory was moved from up2s3 command to create-links command.
    * up2s3 will upload up to the latest repo revision and not up to BASE_REPO_REV.

    programmer visible changes:
    * platformHelper renamed platform_helper everywhere.
    * New method InstlAdmin.get_last_repo_rev.
    * init_from_cmd_line_options can now assign defaults to options that were not specifed on the command line.
    * InstlMisc commands can now report progress by using --start-progress and --total-progress command line options.
    * PlatformSpecificHelperBase.check_checksum renamed check_checksum_for_file.
     * New method PlatformSpecificHelperBase.check_checksum_for_folder
     * PlatformSpecificHelperBase.unwtar renamed unwtar_file.
     * Method PlatformSpecificHelperBase.unwtar_current_folder, with added exit_on_error for windows.

4/3/2014 0.8.8 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Fixed a problem where files created when instl runs under sudo,
        could not be re-written under regular user.
    * unwtar command added - replaced individual batch file unwtar commands with inst unwtar.
    * Big files above 5MB will be wtared and split into chuncks is the result wtar if is larger than 5MB.
    * New variable: COPY_IGNORE_PATTERNS instead of hard coded in the copy producing code.
    * sync command will report the number of files to sync.

    programmer visible changes:
    * os.umask(0) is called first thing.
    * batch file creation does chmod(777).